@@ -46,13 +46,13 @@ static const char *const admin_usage[] =
     "\t                revision on the default branch.\n",
     "\t-N tag[:[rev]]  Same as -n except override existing tag.\n",
     "\t-o range   Delete (outdate) specified range of revisions:\n",
+    "\t   rev1:rev2   Between rev1 and rev2, including rev1 and rev2.\n",
     "\t   rev1::rev2  Between rev1 and rev2, excluding rev1 and rev2.\n",
+    "\t   rev:        rev and following revisions on the same branch.\n",
     "\t   rev::       After rev on the same branch.\n",
+    "\t   :rev        rev and previous revisions on the same branch.\n",
     "\t   ::rev       Before rev on the same branch.\n",
     "\t   rev         Just rev.\n",
-    "\t   rev1:rev2   Between rev1 and rev2, including rev1 and rev2.\n",
-    "\t   rev:        rev and following revisions on the same branch.\n",
-    "\t   :rev        rev and previous revisions on the same branch.\n",
     "\t-q         Run quietly.\n",
     "\t-s state[:rev]  Set revision state (latest revision on branch,\n",
     "\t                latest revision on trunk if omitted).\n",
